# yolov8_deepstream

./: CMakeLists.txt  README.md  deepstream_config.txt
libbboxparser/: parse_custom_bbox.cpp
